# build-tool-test

./: .bazelignore  .bazelrc  .editorconfig  .env.example  .gitignore  EVALUATION_CHECKLIST.md  MODULE.bazel  Makefile  README.md  Taskfile.yml  bazel-bin  bazel-build-tool-test  bazel-out  bazel-testlogs  buildspec.yml  codepipeline-template.yaml  docker-compose.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.buildkite/: pipeline.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: .env.example  BUILD.bazel  Dockerfile  Makefile  README.md  Taskfile.yml  docker-compose.yml  ecs-task-def.json  go.mod  go.sum  project.json
apps/api/cmd/api/: BUILD.bazel  main.go  main_config_test.go  main_test.go
apps/api/cmd/book_created_emailer/: BUILD.bazel  main.go
apps/api/deploy/: book-emailer-sam.yaml
apps/api/domain/: book.go
apps/api/handlers/: book_handler.go
apps/api/internal/domain/: BUILD.bazel  book.go
apps/api/internal/http/: errors.go
apps/api/internal/http/handlers/: BUILD.bazel  book.go  book_integration_test.go
apps/api/internal/http/middleware/: BUILD.bazel  cors.go  log.go
apps/api/internal/lambda/: Taskfile.yml
apps/api/internal/lambda/bookemailer/: BUILD.bazel  handler.go
apps/api/internal/notifications/: BUILD.bazel  sns.go
apps/api/internal/repo/: BUILD.bazel  postgres.go
apps/api/internal/repo/migrations/: 001_init.sql  BUILD.bazel  migrations.go
apps/api/internal/repository/: book_repository.go  book_repository_test.go
apps/api/internal/service/: BUILD.bazel  book.go  book_service.go  book_service_test.go  book_test.go  publisher.go  sqs_publisher.go
apps/api/openapi/: BUILD.bazel  gen.models.go  openapi.yaml  types.gen.go
apps/api/tests/: integration_test.go
apps/web/: .env.example  BUILD.bazel  Dockerfile  README.md  Taskfile.yml  next.config.js  next_defs.bzl  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  project.json  tsconfig.json  vitest.config.js  vitest.config.mjs  vitest.config.ts  vitest_defs.bzl
apps/web/.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  trace
apps/web/.next/cache/: .tsbuildinfo  config.json
apps/web/.next/cache/webpack/client-production/: 1.pack  2.pack  3.pack  4.pack  index.pack  index.pack.old
apps/web/.next/cache/webpack/edge-server-production/: index.pack  index.pack.old
apps/web/.next/cache/webpack/server-production/: 1.pack  2.pack  index.pack  index.pack.old
apps/web/.next/server/: functions-config-manifest.json  server-reference-manifest.json
apps/web/.next/server/app/: page.js  page.js.nft.json
apps/web/.next/server/app/_not-found/: page.js  page.js.nft.json
apps/web/.next/server/app/admin/: new.rsc
apps/web/.next/server/app/admin/new/: page.js  page.js.nft.json
apps/web/.next/server/app/api/books/: route.js
apps/web/.next/server/chunks/: 198.js
apps/web/.next/server/pages/: 500.html
apps/web/.next/server/vendor-chunks/: next@14.2.33_@babel+core@7.28.5_react-dom@18.3.1_react@18.3.1__react@18.3.1.js
apps/web/.next/standalone/: package.json
apps/web/.next/standalone/apps/web/: server.js
apps/web/.next/standalone/apps/web/.next/: app-build-manifest.json  app-path-routes-manifest.json  required-server-files.json  routes-manifest.json
apps/web/.next/standalone/apps/web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js
apps/web/.next/standalone/apps/web/.next/server/app/: _not-found.rsc  page_client-reference-manifest.js
apps/web/.next/standalone/apps/web/.next/server/app/_not-found/: page_client-reference-manifest.js
apps/web/.next/standalone/apps/web/.next/server/app/admin/: new.html
apps/web/.next/standalone/apps/web/.next/server/app/admin/new/: page_client-reference-manifest.js
apps/web/.next/standalone/apps/web/.next/server/pages/: 404.html
apps/web/.next/static/chunks/: 505-eab05ddfb9eb0aa9.js  main-aff5f1446bd330a2.js  main-app-5fd97f68f771e253.js
apps/web/.next/static/chunks/app/: layout-0ed40994664640d2.js
apps/web/.next/static/chunks/app/admin/new/: page-969da1b1d02f41ab.js
apps/web/.next/static/css/: 26fa379168c1d0eb.css
apps/web/.next/types/app/admin/new/: page.ts
apps/web/.next/types/app/api/books/: route.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(admin)/books/: page.tsx
apps/web/app/(admin)/books/[id]/: page.tsx
apps/web/app/(admin)/books/new/: page.tsx
apps/web/app/admin/[id]/edit/: page.tsx
apps/web/app/admin/new/: page.tsx
apps/web/app/api/books/: proxy.ts  route.ts
apps/web/app/api/books/[id]/: route.ts
apps/web/app/books/[id]/: page.tsx
apps/web/app/components/: BookForm.tsx  BookTable.tsx  BooksView.tsx  book-table.tsx
apps/web/app/debug-backend/: page.tsx
apps/web/components/: BookActions.tsx  BookForm.tsx  BookTable.tsx  NewBookForm.tsx
apps/web/lib/api/: client.ts  server.ts  types.gen.ts  types.ts
apps/web/lib/utils/: format.ts
apps/web/scripts/: next-build.mjs
apps/web/tests/: setup.ts
apps/web/tests/e2e/: books.spec.ts
apps/web/tests/integration/: book-form.test.tsx  books.test.ts  new-book-form.test.tsx
apps/web/tests/unit/: book-table.test.tsx  example.test.tsx  home.test.tsx
apps/web/tools/: run_next.cjs  run_vitest.cjs
apps/worker/: .env.example  .eslintrc.json  Dockerfile  package.json  project.json  tsconfig.json
apps/worker/src/: handler.ts
apps/worker/tests/: handler.test.ts
backend/: Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/books/: handler.go  model.go  repository.go  service.go  service_test.go
frontend/: Dockerfile  jest.config.ts  package-lock.json  package.json
infra/deploy/: README.md
infra/terraform/: main.tf  outputs.tf  variables.tf
scripts/: codegen.ts  deploy.sh
tooling/bazel/: BUILD.bazel  WORKSPACE.bazel
tooling/bazel/apps/: BUILD.bazel
tooling/bazel/apps/api/: BUILD.bazel
tooling/bazel/apps/web/: BUILD.bazel
tooling/bazel/apps/worker/: BUILD.bazel
tooling/nx/: nx.json  package.json
tooling/task/: Taskfile.yml
(+23 files in other folders)
