module(name = "book_poc")

bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(name = "go_sdk")

use_repo(
    go_sdk,
)

use_repo(
    use_extension("@rules_go//go:extensions.bzl", "go_register_toolchains"),
)

use_repo(
    use_extension("@gazelle//:extensions.bzl", "go_deps"),
)
