module(
    name = "packt_build_tool_test",
    version = "0.1.0",
)

# rules_go = rules for performing actions (building, testing, linting, etc.) for code written in Go.
# gazelle = rules for an automated build file generator for Go. This allows dependencies to be created and updated automatically.
# rules_pkg = rules for creating a Lambda zip file.
bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# Activate module extension for the go_rules dependencies.
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")

# Grabs the Go dependencies for the application and automatically keeps them up to date.
# Running bazel mod tidy automatically updates this list so there is no reason to add to it manually.
go_deps.from_file(go_mod = "//apps/api:go.mod")
use_repo(go_deps, "com_github_aws_aws_lambda_go", "com_github_aws_aws_sdk_go_v2", "com_github_aws_aws_sdk_go_v2_config", "com_github_aws_aws_sdk_go_v2_service_ses", "com_github_aws_aws_sdk_go_v2_service_sns", "com_github_danielgtaylor_huma_v2", "com_github_google_uuid", "com_github_gorilla_mux", "com_github_jackc_pgx_v5", "com_github_joho_godotenv", "com_github_oapi_codegen_runtime", "com_github_stretchr_testify")

# Activate module extension for the go_sdk and configure nogo (a static analyser build into rules_go which will provide linting).
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "@//apps/api:default_nogo",)

# aspect_rules_js = rules for performing actions (building, testing, linting, etc.) for JavaScript / TypeScript
# using Node.js and npm.
bazel_dep(name = "aspect_rules_js", version = "2.8.2")
bazel_dep(name = "rules_nodejs", version = "6.3.0")
bazel_dep(name = "aspect_rules_jest", version = "0.24.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
# Activate the npm extension that translates pnpm-lock.yaml into Bazel external repos.
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

# rules_oci = rules for performing actions on OCI containers e.g. Docker
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "tar.bzl",  version = "0.7.0")
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    image = "gcr.io/distroless/base",
    platforms = ["linux/arm64"],
    digest = "sha256:ccaef5ee2f1850270d453fdf700a5392534f8d1a8ca2acda391fbb6a06b81c86",
    tag = "latest",
)
use_repo(oci, "distroless_base", "distroless_base_linux_arm64")
