load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = glob(["**/*.go"], exclude=["**/*_test.go"]),
    importpath = "github.com/example/book-poc/apps/api",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "api",
    embed = ["lib"],
    visibility = ["//visibility:public"],
    importpath = "github.com/example/book-poc/apps/api/cmd/api",
)

go_test(
    name = "tests",
    srcs = glob(["**/*_test.go"]),
    embed = ["lib"],
    visibility = ["//visibility:public"],
)
