load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "TOOLS_NOGO", "nogo")
load("@rules_oci//oci:pull.bzl", "oci_pull")
load("@tar.bzl", "tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:pkg.bzl", "pkg_zip")

gazelle(name = "gazelle")

nogo(
    name = "default_nogo",
    visibility = ["//visibility:public"],
    deps = TOOLS_NOGO,
)

tar(
    name = "api_layer",
    srcs = ["//apps/api/cmd/api:api"],
)
oci_image(
    name = "api_image",
    base = "@distroless_base",
    tars = [":api_layer"],
    entrypoint = ["/api"],
    exposed_ports = ["8080"],
)
oci_push(
    name = "api_image_push",
    image = ":api_image",
    repository = "750969166615.dkr.ecr.eu-north-1.amazonaws.com/build-tool-test",
    remote_tags = ["latest"],
)

pkg_files(
    name = "lambda_files",
    srcs = ["//apps/api/internal/lambda/bookemailer:bookemailer"],
    renames = {
        "//apps/api/internal/lambda/bookemailer:bookemailer": "bootstrap",
    },
)
pkg_zip(
    name = "lambda_zip",
    srcs = [":lambda_files"],
    out = "lambda.zip",
)



