load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "web_sources",
    srcs = glob(
        [
            "app/**/*",
            "components/**/*",
            "lib/**/*",
            "public/**/*",
        ],
        exclude = ["**/*.md"],
    ),
)

filegroup(
    name = "test_sources",
    srcs = glob(
        [
            "tests/**/*",
        ],
    ),
)

filegroup(
    name = "config_files",
    srcs = [
        ".eslintrc.json",
        "next-env.d.ts",
        "next.config.js",
        "package.json",
        "tsconfig.json",
        "vitest.config.js",
    ],
)

js_test(
    name = "lint",
    entry_point = "@npm//apps/web/.bin:next",
    args = [
        "lint",
        "apps/web",
    ],
    data = [
        ":config_files",
        ":test_sources",
        ":web_sources",
    ],
    env = {
        "NEXT_TELEMETRY_DISABLED": "1",
    },
)

js_test(
    name = "vitest",
    entry_point = "@npm//apps/web/.bin:vitest",
    args = [
        "run",
        "--config",
        "apps/web/vitest.config.js",
        "--root",
        "apps/web",
    ],
    data = [
        ":config_files",
        ":test_sources",
        ":web_sources",
    ],
    env = {
        "NODE_ENV": "test",
    },
)

test_suite(
    name = "ci",
    tests = [
        ":lint",
        ":vitest",
    ],
)

js_binary(
    name = "next_build",
    entry_point = "@npm//apps/web/.bin:next",
    args = [
        "build",
        "apps/web",
    ],
    data = [
        ":config_files",
        ":test_sources",
        ":web_sources",
    ],
    env = {
        "NEXT_TELEMETRY_DISABLED": "1",
    },
)

alias(
    name = "web",
    actual = ":ci",
)
