load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "book_created_emailer_lib",
    srcs = ["main.go"],
    importpath = "github.com/example/bookapi/cmd/book_created_emailer",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/api/internal/lambda/bookemailer",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)

go_binary(
    name = "book_created_emailer",
    embed = [":book_created_emailer_lib"],
    visibility = ["//visibility:public"],
)
