load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "repo",
    srcs = ["postgres.go"],
    importpath = "github.com/example/bookapi/internal/repo",
    visibility = ["//apps/api:__subpackages__"],
    deps = [
        "//apps/api/internal/domain",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
