load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "handlers",
    srcs = ["book.go"],
    importpath = "github.com/example/bookapi/internal/http/handlers",
    visibility = ["//apps/api:__subpackages__"],
    deps = [
        "//apps/api/internal/domain",
        "//apps/api/internal/repo",
        "//apps/api/internal/service",
        "//apps/api/openapi",
        "@com_github_danielgtaylor_huma_v2//:huma",
        "@com_github_google_uuid//:uuid",
        "@com_github_oapi_codegen_runtime//types",
    ],
)
