load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "bookemailer",
    srcs = ["handler.go"],
    importpath = "github.com/example/bookapi/internal/lambda/bookemailer",
    visibility = ["//apps/api:__subpackages__"],
    deps = [
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_ses//:ses",
        "@com_github_aws_aws_sdk_go_v2_service_ses//types",
    ],
)
